--- a/src/index.css
+++ b/src/index.css
@@ -93,3 +93,11 @@
   font-weight: 400;
   src: url("./assets/fonts/oswald-v53-latin-regular.woff2") format("woff2"); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
 }
+
+@font-face {
+  font-display: swap;
+  font-family: "Digital";
+  font-style: normal;
+  font-weight: 400;
+  src: url("./assets/fonts/digital-7.ttf") format("truetype");
+}
